--- a/style.css
+++ b/style.css
@@ -21,3 +21,24 @@ nav {
     position: relative;
     transition: width 1.5s;
 }
+
+.input {
+    margin: 10px 50px;
+    margin-left: 20px;
+    width: 100%;
+    color: #ff6e00;
+    border: none;
+    background: transparent;
+    outline: none;
+    transition-delay: 0.5s;
+}
+
+.magnifier {
+    position: absolute;
+    right: 15px;
+    width: 25px;
+    text-align: center;
+    margin: 0 auto;
+    cursor: pointer;
+    color: #ffa31a;
+}
